Traspaso de usuario desde inicio a menu
Cambios en nombres, traspaso de parámatreos y utilización del método auth para conseguir el email del usuario de forma global

--- a/src/app/pages/login/inicio/inicio.page.html
+++ b/src/app/pages/login/inicio/inicio.page.html
@@ -8,7 +8,7 @@
             <div class="mt-10 max-w-xl m-auto px-10">
                 <div class="mt-2">
                     <label for="email" class="dark:text-white text-base font-normal"
-                        >Nombre de usuario:</label
+                        >Correo electrónico:</label
                     >
                     <div
                         class="flex my-3 items-center justify-between bg-zinc-100 rounded-lg"
@@ -18,7 +18,7 @@
                             name="email"
                             placeholder=""
                             id=""
-                            [(ngModel)]="email"
+                            [(ngModel)]="correo"
                             class="w-full dark:text-white dark:placeholder:text-neutral-600 dark:bg-zinc-950 px-4 bg-transparent outline-none rounded-lg"
                         />
                     </div>
