Creacion vista selccionar-auto (por teminar)

--- a/src/app/pages/main/crear-viaje/crear-viaje.page.html
+++ b/src/app/pages/main/crear-viaje/crear-viaje.page.html
@@ -39,6 +39,7 @@
 
                 <div class="relative flex items-center">
                     <button
+                        (click)="seleccionarVehiculo()"
                         class="w-2/4 bg-amarillo-ppal rounded-lg shadow text-center text-white text-base font-semibold py-3"
                     >
                     <!-- No funciona de momento -->
